--- a/frontend/src/components/dashboard/dashboard.css
+++ b/frontend/src/components/dashboard/dashboard.css
@@ -4,9 +4,24 @@
     color:black;
 }
 
-
-
-
+#card{
+    border: solid;
+    margin: 10px;
+    padding: 10px;
+    width: 400px;
+}
+#card1{
+    border: solid;
+    width: 400px;
+    margin: 10px;
+    padding: 10px;
+}
+#card2{
+    border: solid;
+    width: 400px;
+    margin: 10px;
+    padding: 10px;
+}
 
 
 
