--- a/frontend/src/components/dashboard/dashboard.css
+++ b/frontend/src/components/dashboard/dashboard.css
@@ -54,3 +54,14 @@
     width: 50px;
     padding: 100px;
 }
+#availableCard{
+    display: flex;
+    flex-direction: row;
+    width: 30%;
+    height: 100%;
+    float: left;
+}
+
+#nav3{
+    border: solid;
+}
