--- a/frontend/src/components/signInUp/signInUp.css
+++ b/frontend/src/components/signInUp/signInUp.css
@@ -10,3 +10,57 @@
 
     
 }
+
+@media all and (min-width: 480px) {
+    .SignUp {
+      margin: 50px;
+      max-width: 320px;
+      padding: 300px;
+      display: inline;
+    }
+    #form {
+      border: 1px solid rgb(224, 222, 222); ;
+      width: 350px;
+      size: 200px;
+      display: flex;
+      flex-direction: row;
+      justify-content:space-around;
+    }
+  }
+  #h,
+  #signinList {
+    margin: 30px;
+    font-family: “Franklin Gothic Medium”, “Arial Narrow”, Arial, sans-serif;
+    border-radius: 5px;
+    border: 1px solid rgb(224, 222, 222);
+    border-radius: 5px;
+  }
+  #btn {
+    width: 100px;
+    height: 30px;
+    margin: 15px;
+    font-family: Georgia, “Times New Roman”, Times, serif;
+    align-items: center;
+    font-size: 15px;
+  }
+  #btn2 {
+    color: rgb(121, 121, 77);
+    width: 150px;
+    height: 30px;
+    margin: 10px;
+    font-size: 15px;
+    color: aliceblue;
+    font-family: Georgia, “Times New Roman”, Times, serif;
+  }
+  #btn3 {
+    width: 150px;
+    height: 30px;
+    text-align: center;
+  }
+ 
+  
+  
+  
+  
+  
+  
