--- a/frontend/src/components/signInUp/signInUp.css
+++ b/frontend/src/components/signInUp/signInUp.css
@@ -1,4 +1,4 @@
-.signIn{
+ /* .signIn{
     border: solid;
     width: 350px;
     height: 350px;
@@ -9,6 +9,9 @@
     justify-content: flex-end;
 
     
+}  */
+#box{
+  margin-top: 90px;
 }
 
 @media all and (min-width: 480px) {
@@ -17,11 +20,13 @@
       max-width: 320px;
       padding: 300px;
       display: inline;
+      
     }
     #form {
       border: 1px solid rgb(224, 222, 222); ;
       width: 350px;
       size: 200px;
+      
       display: flex;
       flex-direction: row;
       justify-content:space-around;
@@ -31,10 +36,20 @@
   #signinList {
     margin: 30px;
     font-family: “Franklin Gothic Medium”, “Arial Narrow”, Arial, sans-serif;
-    border-radius: 5px;
+    /* border-radius: 5px; */
     border: 1px solid rgb(224, 222, 222);
-    border-radius: 5px;
+    /* border-radius: 5px; */
+    
+    
   }
+  /* #card{
+   
+    border: solid;
+  }
+  #card1{
+   
+  } */
+  
   #btn {
     width: 100px;
     height: 30px;
@@ -42,6 +57,8 @@
     font-family: Georgia, “Times New Roman”, Times, serif;
     align-items: center;
     font-size: 15px;
+    
+  
   }
   #btn2 {
     color: rgb(121, 121, 77);
@@ -51,13 +68,15 @@
     font-size: 15px;
     color: aliceblue;
     font-family: Georgia, “Times New Roman”, Times, serif;
+    
   }
   #btn3 {
     width: 150px;
     height: 30px;
     text-align: center;
+    
   }
- 
+  
   
   
   
