--- a/frontend/src/components/dashboard/dashboard.css
+++ b/frontend/src/components/dashboard/dashboard.css
@@ -70,3 +70,10 @@
     justify-content: right;
     border: solid;
 }
+#AvaCdBtn{
+    width: 100%;
+    margin-bottom: 0%;
+}
+#nav1Contain{
+    background-color: gainsboro;
+}
