--- a/frontend/src/components/navigation/navigation.css
+++ b/frontend/src/components/navigation/navigation.css
@@ -2,8 +2,18 @@
 #nafbar{
 
     background-image:  url("../img/img1.PNG");
-    padding: 40px;
+    padding: 30px;
 
 
 }
-
+#btnLogOut{
+    background-color: #e7e7e7;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 50%;
+  }
