--- a/frontend/src/components/navigation/navigation.css
+++ b/frontend/src/components/navigation/navigation.css
@@ -7,3 +7,14 @@
 
 }
 
+#btnLogOut{
+    background-color: #e7e7e7;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 50%;
+  }
