--- a/frontend/src/components/dashboard/dashboard.css
+++ b/frontend/src/components/dashboard/dashboard.css
@@ -57,9 +57,13 @@
 #availableCard{
     display: flex;
     flex-direction: row;
-    width: 30%;
-    height: 100%;
+    justify-content: space-between;
+    /* width: 40%;
+    height: 100%; */
     float: left;
+    height: 250px;
+    margin: 15px 10px 15px 10px;
+    width: 400px;
 }
 
 #nav3{
@@ -80,4 +84,19 @@
 
 #nav1Contain{
     background-color: gainsboro;
+    margin-top: 20px;
+}
+#e-services{
+    float: right;
+}
+
+
+
+.availableCard1{
+    height: 250px;
+    width: 400px;
+}
+
+#navBody{
+    margin-top: 20px;
 }
