--- a/frontend/src/components/navigation/navigation.css
+++ b/frontend/src/components/navigation/navigation.css
@@ -1,7 +1,7 @@
 
 #nafbar{
 
-    background-image:  url("../img/img1.PNG");
+    background-image:  url("../img/navImg.PNG");
     padding: 30px;
 
 
@@ -11,10 +11,11 @@
     background-color: #e7e7e7;
     border: none;
     color: white;
-    padding: 15px 32px;
+    padding: 10px 20px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
+    font-size: 10px;
     border-radius: 50%;
 
+}
