--- a/frontend/src/components/signInUp/signInUp.css
+++ b/frontend/src/components/signInUp/signInUp.css
@@ -1,5 +1,5 @@
 #box {
-  margin-top: 90px;
+  margin-top: 10px;
 }
 
 @media all and (min-width: 480px) {
@@ -13,10 +13,21 @@
     border: 1px solid rgb(224, 222, 222);
 
     /* border-radius: 5px; */
-   
-    
-    
+
   }
+  #signInCard{
+    margin-top: 20px;
+  }
+  #demoCard{
+    margin-top: 20px;
+  }
+  .signIn{
+    margin: 50px;
+    max-width: 320px;
+    padding: 300px;
+    display: inline;
+  }
+}
   #card{
     border:solid ;
     border-radius: 20px;
@@ -62,26 +73,72 @@
   
   
   
-
+  #sinUpform{
+    border: 1px solid rgb(224, 222, 222);
     width: 500px;
     size: 200px;
     border-radius:20px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-  }
-}
-#h,
+  } 
+  #formCol{
+    border: 1px solid rgb(224, 222, 222);
+      width: 200px;
+      height: 400px;
+      /* size: 100px; */
+      border-radius:10px;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      /* margin-left: 70px;*/
+      /* margin-right: 300px;  */
+      margin-top: 30px;
+
+    }
+     /* #demoCard{ */
+      /* border: 1px solid rgb(224, 222, 222); */
+      /* width: 500px; */
+      /* height: 200px; */
+      /* size: 00px; */
+      /* border-radius:10px; */
+      /* display: flex; */
+      /* flex-direction: row; */
+      /* justify-content: space-around; */
+      /* margin-left: 70px;*/
+      /* margin-left: 50px;  */
+      /* margin-top: 30px; */
+    /* }  */
+
+
 #signinList {
-  margin: 30px;
+  margin: 5px;
   font-family: “Franklin Gothic Medium”, “Arial Narrow”, Arial, sans-serif;
 
   border: 1px solid rgb(224, 222, 222);
   border-radius: 100px;
+  border-radius: 10px;
+  border-width: 100%;
+  size: 100%;
+
 }
+#signinList1{
+  margin: 5px;
+  font-family: “Franklin Gothic Medium”, “Arial Narrow”, Arial, sans-serif;
+
+  border: 1px solid rgb(224, 222, 222);
+  border-radius: 10px;
+}
+
 #card {
-  border: solid;
   border-radius: 20px;
+  border: 1px solid rgb(224, 222, 222);
+  width: 500px;
+  size: 200px;
+  border-radius:20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
 #card1 {
   border-radius: 20px;
@@ -96,22 +153,24 @@
 }
 #btn2 {
   color: rgb(121, 121, 77);
-  width: 150px;
+  width: 113px;
   height: 30px;
-  margin: 10px;
-  font-size: 15px;
+  margin: 1px;
+  font-size: 13px;
   color: aliceblue;
   font-family: Georgia, “Times New Roman”, Times, serif;
+  float: right;
 }
 #btn3 {
-  width: 150px;
-  height: 30px;
+  width: 80px;
+  height: 38px;
   text-align: center;
+  margin-left: 20px;
 }
-#cardList1{
+#list{
   /* margin-top: 50px; */
-  padding: 10px;
-  height: 400px;
+  padding-left: 10px;
+  height: 40px;
   width: 500px;
   align-content: center;
  
@@ -119,3 +178,12 @@
 #headCard{
   width: 100%;
 }
+#regBtn{
+  width: 120px;
+  height: 30px;
+  margin: 1px;
+  font-size: 13px;
+  color: aliceblue;
+  font-family: Georgia, “Times New Roman”, Times, serif;
+  float: left;
+} 
